tests/netedit/basic/configs/netecfg/load/invalid/all/errors.netedit
Error: File 'C:\Users\alva_pa\.texttest\tmp\netedit.gui.13Dec091641.23688\netedit.gui\basic\configs\netecfg\invalid_inputs\all\dummy.net.xml' is not accessible (No such file or directory).
Error: No nodes loaded.
Error: Failed to build network.
TestFunctions: Killed Netedit process. 'reference.png' not found
